// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand icon is collapsed on render 1`] = `
<td
  className="table-expand-icon"
  onClick={[Function]}
>
  <i
    className="fas fa-caret-right fa-2x"
  />
</td>
`;

exports[`Expand icon is expanded on render 1`] = `
<td
  className="table-expand-icon"
  onClick={[Function]}
>
  <i
    className="fas fa-caret-down fa-2x"
  />
</td>
`;
